// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate Email List Verify properties that are NOT members 1`] = `
{
  "__typename": "Query",
  "userCurrent": {
    "__typename": "User",
    "accessList": [
      {
        "__typename": "Access",
        "community": {
          "__typename": "Community",
          "rawPropertyList": [
            {
              "__typename": "Property",
              "address": "123 Adventure Drive",
              "occupantList": [
                {
                  "__typename": "Occupant",
                  "email": "ksmith@email.com",
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`Generate Email List Verify properties that are members 1`] = `
{
  "__typename": "Query",
  "userCurrent": {
    "__typename": "User",
    "accessList": [
      {
        "__typename": "Access",
        "community": {
          "__typename": "Community",
          "rawPropertyList": [
            {
              "__typename": "Property",
              "address": "99 Fortune Drive",
              "occupantList": [
                {
                  "__typename": "Occupant",
                  "email": "Email1",
                },
                {
                  "__typename": "Occupant",
                  "email": "Email2",
                },
                {
                  "__typename": "Occupant",
                  "email": "Email3",
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`Generate Email List Verify properties that have not been renewed 1`] = `
{
  "__typename": "Query",
  "userCurrent": {
    "__typename": "User",
    "accessList": [
      {
        "__typename": "Access",
        "community": {
          "__typename": "Community",
          "rawPropertyList": [
            {
              "__typename": "Property",
              "address": "123 Adventure Drive",
              "occupantList": [
                {
                  "__typename": "Occupant",
                  "email": "ksmith@email.com",
                },
              ],
            },
            {
              "__typename": "Property",
              "address": "99 Fortune Drive",
              "occupantList": [
                {
                  "__typename": "Occupant",
                  "email": "Email1",
                },
                {
                  "__typename": "Occupant",
                  "email": "Email2",
                },
                {
                  "__typename": "Occupant",
                  "email": "Email3",
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;
